--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap"
+    rel="stylesheet"
   </head>
   <body>
     <app-root></app-root>
